# komplett-normale-busliste

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  RocketExample.toml  slightly-hacky-local-testing.patch
crates/backend/: Cargo.toml
crates/backend/src/: date_helpers.rs  lib.rs  main.rs  sql_interface.rs  tests.rs
crates/backend/src/routes/: dashboard.rs  mod.rs
crates/backend/src/routes/superuser/: drive.rs  mod.rs  registration.rs  settings.rs
crates/backend/static/: settings.css
crates/backend/templates/: personcontrol.html.hbs
crates/sql_interface/: Cargo.toml
crates/sql_interface/src/: lib.rs  main.rs  queries.rs  sql_struct.rs  statement.rs  tests.rs  types.rs
crates/sql_interface_derive/: Cargo.toml
crates/sql_interface_derive/src/: lib.rs
crates/sql_interface_macros/: Cargo.toml
crates/sql_interface_macros/src/: attr.rs  field_column.rs  lib.rs
crates/sql_interface_macros/src/reconstruct/: mod.rs  struct_attr.rs
docs/: authflow.md  database-concept.md  notes.md
scripts/: NOTICE.md  autogenerate_mails.py  csv_to_sqlite.py  init_db.py  migrate.py  upgrade.py  utils.py
scripts/migrations/: 0.1.0-1-add-is-visible.sql  0.1.0-2-settings-table.sql  0.1.0-3-drive-deadline.sql  0.2.0-1-drive-registration-cap.sql  0.2.0-2-chrono-to-time.sql  README.md
src/: authflow.rs  config.rs  date_helpers.rs  init_db.sql  lib.rs  main.rs  mensa_screen.rs  sql_interface.rs  superuser.rs  tests.rs
src/routes/: authflow.rs  dashboard.rs  error.rs  mod.rs  superuser.rs
src/routes/superuser/: drive.rs  mod.rs  person.rs
src/sql_interface/: mod.rs  sql_struct.rs
static/: style.css
templates/: dashboard.html.hbs  drives-panel.html.hbs  list.html.hbs  login.html.hbs  mensa.html.hbs  personcontrol.html.hbs  personintrospect.html.hbs  registrations-panel.html.hbs  server-error.html.hbs  settings.html.hbs  superuser-panel.html.hbs
