[package]
name = "komplett-normale-busliste"
version = "0.1.0"
edition = "2021"
publish = false
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "3"
argon2 = "0.4"
cookie = "0.16"
hmac = "0.11"
jwt = "0.14"
log = "0.4"
libsqlite3-sys = "0.22"
rand = "0.8"
serde = "1"
serde_json = "1.0"
sha2 = "0.9"
thiserror = "1.0"
time = "0.3"

[dependencies.base64ct]
version = "1"
features = ["alloc"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.figment]
version = "0.10"
features = ["toml", "env"]

[dependencies.lettre]
version = "0.10.0-rc.3"
default-features = false
features = ["smtp-transport", "builder", "hostname", "serde", "tokio1", "tokio1-rustls-tls", "rustls-tls"]

[dependencies.rocket]
version = "0.5.0-rc.1"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default_features = false
features = ["sqlite_pool"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars"]

[dependencies.rusqlite]
version = "0.25"
features = ["chrono"]


# vim:ft=dosini:
