[package]
name = "backend"
version = "0.3.0"
edition = "2021"
publish = false

[dependencies]
ammonia = "3"
argon2 = "0.4"
cookie = "0.16"
hmac = "0.11"
jwt = "0.14"
log = "0.4"
libsqlite3-sys = "0.25"
rand = "0.8"
serde = "1"
serde_json = "1.0"
sha2 = "0.9"
thiserror = "1.0"
time = "0.3"

sql_interface = { path = "../sql_interface" }

[dependencies.base64ct]
version = "1"
features = ["alloc"]

[dependencies.chrono]
version = "0.4"
features = ["serde", "clock"]

[dependencies.figment]
version = "0.10"
features = ["toml", "env"]

[dependencies.lettre]
version = "0.10"
default-features = false
features = ["smtp-transport", "builder", "hostname", "serde", "tokio1", "tokio1-rustls-tls", "rustls-tls"]

[dependencies.rocket]
git = "https://github.com/dorodere/Rocket"
branch = "v0.5-rc"

[dependencies.rocket_sync_db_pools]
git = "https://github.com/dorodere/Rocket"
branch = "v0.5-rc"
default_features = false
features = ["sqlite_pool"]

[dependencies.rocket_dyn_templates]
git = "https://github.com/dorodere/Rocket"
branch = "v0.5-rc"
features = ["handlebars"]

[dependencies.rusqlite]
version = "0.28"
features = ["chrono"]

# vim:ft=dosini:
