[package]
name = "sql_interface"
version = "0.1.0"
edition = "2021"

[dependencies]
indoc = "1.0"
itertools = "0.10"
lettre = { version = "0.10", default-features = false, features = ["smtp-transport", "builder", "hostname", "serde", "tokio1", "tokio1-rustls-tls", "rustls-tls"] }
thiserror = "1.0"
time = { version = "0.3", features = ["macros"] }
rusqlite = { version = "0.28", features = ["time"] }

sql_interface_macros = { path = "../sql_interface_macros" }
